# ai-job-scraper

./: .gitignore  main.py  pyproject.toml  requirements.txt
.quiklist/: ai-job-scraper.json
src/: ai_extractor.py  scraper.py
