[project]
name = "ai-job-scraper"
version = "0.1.0"
description = "API endpoint for tool that extracts important job information from a linkedin link."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "fastapi-cli>=0.0.13",
    "openai>=1.109.1",
    "playwright>=1.55.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "selenium>=4.35.0",
    "uvicorn>=0.37.0",
]
[tool.deptry]
ignore = ["DEP002"]
[tool.deptry.package_module_name_map]
"python-dotenv" = "dotenv"
